--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
         <h1 class="first-heading">Title Placeholder</h1>
         <h2 class="second-heading">Web link</h2>
       </header>
-      <section class="marquee-wrapper"></section>
+      <section class="marquee-wrapper">
+        <div class="marquee-animation"></div>
+        <a href="index.html">Web link</a>
+      </section>
+      <main class="index-main">
+        <nav class="main-nav"></nav>
+        <section class="introduction"></section>
+        <section class="to-do"></section>
+      </main>
     </article>
   </body>
 </html>
