--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </section>
           <section class="statuscafe"></section>
         </main>
-        <footer class="index-footer"></footer>
+        <footer class="index-footer">©2024 Footer text</footer>
       </article>
     </article>
   </body>
