long lorem ipsum
long lorem ipsum to test out custom scrollbar webkit

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Produkt</title>
   </head>
-  <body>
+  <body class="main-body">
     <article class="wrapper-outer">
       <article class="wrapper-inner">
         <header class="header">
@@ -18,7 +19,176 @@
         </section>
         <main class="index-main">
           <nav class="main-nav"></nav>
-          <section class="introduction"></section>
+          <section class="introduction">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
+            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
+            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
+            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
+            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+            obcaecati repellendus laboriosam, quasi voluptatem maiores
+            consequuntur modi quisquam sequi itaque iusto recusandae in
+            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
+            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
+            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
+            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
+            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
+            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
+            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+            obcaecati repellendus laboriosam, quasi voluptatem maiores
+            consequuntur modi quisquam sequi itaque iusto recusandae in
+            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
+            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
+            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
+            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
+            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
+            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
+            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+            obcaecati repellendus laboriosam, quasi voluptatem maiores
+            consequuntur modi quisquam sequi itaque iusto recusandae in
+            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
+            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
+            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
+            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
+            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
+            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
+            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+            obcaecati repellendus laboriosam, quasi voluptatem maiores
+            consequuntur modi quisquam sequi itaque iusto recusandae in
+            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
+            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
+            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
+            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
+            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
+            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
+            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+            obcaecati repellendus laboriosam, quasi voluptatem maiores
+            consequuntur modi quisquam sequi itaque iusto recusandae in
+            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
+            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
+            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
+            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
+            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
+            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
+            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+            obcaecati repellendus laboriosam, quasi voluptatem maiores
+            consequuntur modi quisquam sequi itaque iusto recusandae in
+            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
+            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
+            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
+            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
+            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
+            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
+            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+            obcaecati repellendus laboriosam, quasi voluptatem maiores
+            consequuntur modi quisquam sequi itaque iusto recusandae in
+            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
+            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
+            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
+            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
+            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
+            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
+            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+            obcaecati repellendus laboriosam, quasi voluptatem maiores
+            consequuntur modi quisquam sequi itaque iusto recusandae in
+            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
+            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
+            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
+            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
+            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
+            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
+            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+            obcaecati repellendus laboriosam, quasi voluptatem maiores
+            consequuntur modi quisquam sequi itaque iusto recusandae in
+            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
+            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
+            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
+            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
+            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
+            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
+            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+            obcaecati repellendus laboriosam, quasi voluptatem maiores
+            consequuntur modi quisquam sequi itaque iusto recusandae in
+            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
+            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
+            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
+            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
+            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
+            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
+            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+            obcaecati repellendus laboriosam, quasi voluptatem maiores
+            consequuntur modi quisquam sequi itaque iusto recusandae in
+            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
+            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
+            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
+            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
+            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
+            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
+            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
+            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
+            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
+            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
+            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
+            obcaecati repellendus laboriosam, quasi voluptatem maiores
+            consequuntur modi quisquam sequi itaque iusto recusandae in
+            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
+            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
+            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
+            eius nobis. Laborum pariatur cumque eaque itaque repudiandae?
+          </section>
           <section class="to-do"></section>
           <section class="playlist-box"></section>
           <section class="link-scroll">
@@ -33,6 +203,7 @@
             </marquee>
           </section>
           <section class="statuscafe"></section>
+          <section class="extra-space"></section>
         </main>
         <footer class="index-footer">©2024 Footer text</footer>
       </article>
