--- a/index.html
+++ b/index.html
@@ -10,184 +10,23 @@
     <article class="wrapper-outer">
       <article class="wrapper-inner">
         <header class="header">
-          <h1 class="first-heading">Title Placeholder</h1>
-          <h2 class="second-heading">Web link</h2>
+          <h1 class="header__h1">Title Placeholder</h1>
+          <h2 class="header__h2">Web link</h2>
         </header>
         <section class="marquee-wrapper">
           <div class="marquee-animation"></div>
-          <a href="index.html">Web link</a>
+          <a class="marquee-text" href="index.html">Web link</a>
         </section>
         <main class="index-main">
           <nav class="main-nav"></nav>
           <section class="introduction">
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
-            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
-            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
-            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
-            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
-            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-            obcaecati repellendus laboriosam, quasi voluptatem maiores
-            consequuntur modi quisquam sequi itaque iusto recusandae in
-            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
-            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
-            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
-            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
-            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
-            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
-            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
-            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
-            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-            obcaecati repellendus laboriosam, quasi voluptatem maiores
-            consequuntur modi quisquam sequi itaque iusto recusandae in
-            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
-            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
-            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
-            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
-            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
-            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
-            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
-            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
-            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-            obcaecati repellendus laboriosam, quasi voluptatem maiores
-            consequuntur modi quisquam sequi itaque iusto recusandae in
-            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
-            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
-            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
-            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
-            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
-            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
-            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
-            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
-            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-            obcaecati repellendus laboriosam, quasi voluptatem maiores
-            consequuntur modi quisquam sequi itaque iusto recusandae in
-            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
-            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
-            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
-            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
-            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
-            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
-            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
-            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
-            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-            obcaecati repellendus laboriosam, quasi voluptatem maiores
-            consequuntur modi quisquam sequi itaque iusto recusandae in
-            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
-            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
-            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
-            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
-            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
-            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
-            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
-            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
-            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-            obcaecati repellendus laboriosam, quasi voluptatem maiores
-            consequuntur modi quisquam sequi itaque iusto recusandae in
-            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
-            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
-            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
-            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
-            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
-            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
-            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
-            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
-            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-            obcaecati repellendus laboriosam, quasi voluptatem maiores
-            consequuntur modi quisquam sequi itaque iusto recusandae in
-            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
-            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
-            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
-            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
-            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
-            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
-            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
-            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
-            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-            obcaecati repellendus laboriosam, quasi voluptatem maiores
-            consequuntur modi quisquam sequi itaque iusto recusandae in
-            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
-            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
-            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
-            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
-            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
-            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
-            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
-            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
-            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-            obcaecati repellendus laboriosam, quasi voluptatem maiores
-            consequuntur modi quisquam sequi itaque iusto recusandae in
-            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
-            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
-            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
-            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
-            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
-            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
-            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
-            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
-            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-            obcaecati repellendus laboriosam, quasi voluptatem maiores
-            consequuntur modi quisquam sequi itaque iusto recusandae in
-            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
-            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
-            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
-            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
-            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
-            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
-            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
-            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
-            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-            obcaecati repellendus laboriosam, quasi voluptatem maiores
-            consequuntur modi quisquam sequi itaque iusto recusandae in
-            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
-            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
-            eius nobis. Laborum pariatur cumque eaque itaque repudiandae? Lorem,
-            ipsum dolor sit amet consectetur adipisicing elit. Asperiores
-            voluptatum expedita consequuntur quasi ut obcaecati. Nostrum
-            accusamus beatae veritatis sapiente obcaecati debitis voluptatum
-            reiciendis, fuga ipsa earum voluptatem, odit totam! Lorem ipsum
-            dolor sit amet, consectetur adipisicing elit. Tenetur enim quia ad
-            ut modi explicabo voluptates, quasi est praesentium, debitis quod?
-            Molestiae praesentium ab fuga sed quos ullam incidunt officia. Lorem
-            ipsum dolor sit amet consectetur, adipisicing elit. Doloribus
-            obcaecati repellendus laboriosam, quasi voluptatem maiores
-            consequuntur modi quisquam sequi itaque iusto recusandae in
-            repudiandae ut fuga laborum ex corrupti accusamus! Lorem ipsum dolor
-            sit amet consectetur adipisicing elit. Rem vitae quidem at iure
-            nesciunt, neque porro cumque consequatur, quo, molestias ea commodi
-            eius nobis. Laborum pariatur cumque eaque itaque repudiandae?
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi
+            officia neque, fugit, et deleniti aliquam eveniet repellat eum non
+            omnis perferendis vel repudiandae, ea quos libero consequatur
+            deserunt animi magnam. Lorem ipsum dolor sit amet consectetur,
+            adipisicing elit. Rem odit non voluptatibus atque quo nostrum
+            deleniti quam doloribus aut, nobis cum ab perspiciatis rerum
+            inventore optio repudiandae repellendus fugiat vitae.
           </section>
           <section class="to-do"></section>
           <section class="playlist-box"></section>
