--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         </header>
         <section class="marquee-wrapper">
           <div class="marquee-animation"></div>
-          <a class="marquee-text" href="index.html">Web link</a>
+          <section class="marquee-text--background">
+            <a class="marquee-text" href="index.html">Web link</a>
+          </section>
         </section>
         <main class="index-main">
           <nav class="main-nav"></nav>
