--- a/index.html
+++ b/index.html
@@ -20,7 +20,24 @@
           </section>
         </section>
         <main class="index-main">
-          <nav class="main-nav"></nav>
+          <nav class="main-nav">
+            <div class="ornatediv">
+              <div class="innerornate">
+                put your text here! :3 Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Mollitia at placeat facilis, ipsam alias est,
+                assumenda eligendi iure ipsum aperiam iste exercitationem.
+                Eaque, tempora? Dolor doloremque officiis aliquam nam excepturi.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab
+                numquam qui consectetur fugiat repellendus ipsam similique?
+                Assumenda quasi odit molestias, debitis mollitia, totam
+                quibusdam sequi quod inventore nisi, quam impedit? Lorem ipsum
+                dolor sit amet, consectetur adipisicing elit. Et ratione, esse
+                iusto error molestiae, accusamus repellat necessitatibus nobis
+                officiis enim laboriosam ab culpa animi tempore veniam, nisi ea
+                accusantium repellendus!
+              </div>
+            </div>
+          </nav>
           <section class="introduction">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nisi
             officia neque, fugit, et deleniti aliquam eveniet repellat eum non
